--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="images/icone-disney.png" type="img/icon">
-    <title>Disney + COPIE</title>
+    <title>Disney+</title>
 </head>
 <body>
 
@@ -208,7 +208,7 @@
 
         <div class="images">
             <!-- Image illustrative  -->
-            <center><img src="images/original.jpeg" alt=""></center>
+            <center><img src="original.jpeg" alt=""></center>
         </div>
 
         <div class="conteneur">
