--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@ document.querySelectorAll('.faq-item').forEach(item => {
     
     <div class="ligne1">
         <!-- Lien vers une version en anglais du site -->
-        <a href="https://anatoli-mikoyan.github.io/MIKOYAN-ANATOLI-projet-Disney-plusAN.github.io/">
+        <a href="https://the-f-is-trippin.github.io/Disney-plus-Francois-Fofana-Souare-EN/">
             <div class="excp1"><img src="logo-planete (1).svg" width="12px" alt=""> <span class="">Francais</span>  
             <span class="rotate"><img src="logo-signe-mathematique.svg" width="10px" alt=""></span></div>
         </a>   
