--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
             </h4>
             
             <!-- Note légale pour clarifier les termes de l'abonnement -->
-            <h5>* la résiliation prend effet à la fin de la période d'abonnement en cours. Abonnement requis. <br> 
-                Becoming Karl Lagerfield en streaming dès le 7 juin.
+            <h5>* La résiliation prend effet à la fin de la période d’abonnement en cours. Abonnement requis. <br> 
+                ** Offre valable jusqu'au 16/10/2024 et réservée aux personnes de 18 ans ou plus sans abonnement Disney+. Le tarif de l'abonnement Standard annuel passera à 99,90 € à compter du 17/10/2024. Économies calculées entre le tarif actuel de 89,90 € et le nouveau tarif Standard de 99,90 €. L'abonnement sera automatiquement renouvelé au tarif Standard alors en vigueur, sauf si vous le résiliez avant ou passez à un autre abonnement Disney+.
             </h5>
             
             <!-- Logo mathématique utilisé à des fins esthétiques -->
