--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
     </div>
 </section>
 
-<!-- Script permettant de rendre les questions FAQ interactives (dérouler/fermer les réponses) -->
+<!-- Script permettant d'interagir avec la FAQ (dérouler/fermer les réponses) -->
 <script>
 document.querySelectorAll('.faq-item').forEach(item => {
     item.addEventListener('click', () => {
